# EMIS_Benchmark_extractor

./: .gitignore  README.md  app.py  emis_api.py  main.py  pyproject.toml  requirements.txt
benchmark_usecase/: .gitignore  benchmark_visualization.py  devScript.py  test.py
data/: benchmarks.json
